# drivers_external_device_manager

./: AGENTS.md  CODEOWNERS  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  extdevmgr.gni  hisysevent.yaml
.gitcode/: CODEOWNERS
framework/driver_extension_controller/: BUILD.gn
framework/driver_extension_controller/include/: driver_extension_controller.h
framework/driver_extension_controller/src/: driver_extension_controller.cpp
frameworks/ddk/scsi/: BUILD.gn  scsi_ddk_api.cpp
frameworks/js/ani/driver_extension_ability/: BUILD.gn
frameworks/js/ani/driver_extension_ability/ets/: @ohos.app.ability.DriverExtensionAbility.ets
frameworks/js/napi/device_manager/: BUILD.gn  device_manager_middle.cpp  device_manager_middle.h
frameworks/js/taihe/: BUILD.gn
frameworks/js/taihe/driver_extension_context/: BUILD.gn
frameworks/js/taihe/driver_extension_context/idl/: DriverExtensionContext.taihe
frameworks/js/taihe/idl/: ohos.driver.deviceManager.taihe
frameworks/js/taihe/include/: ohos.driver.deviceManager.impl.h
frameworks/js/taihe/src/: ani_constructor.cpp  ohos.driver.deviceManager.impl.cpp
interfaces/innerkits/: BUILD.gn  IDriverExtMgr.idl  driver_ext_mgr_client.h  driver_ext_mgr_client.map  driver_ext_mgr_types.h  emit_event_types.h  hdf_ext_devmgr_interface_code.h  idriver_ext_mgr.h  idriver_ext_mgr_callback.h
services/: BUILD.gn
services/native/driver_extension/: BUILD.gn
services/native/driver_extension/include/: driver_extension.h  driver_extension_module_loader.h  js_driver_extension.h  js_driver_extension_context.h
services/native/driver_extension/src/: driver_extension.cpp  js_driver_extension.cpp  js_driver_extension_context.cpp
services/native/driver_extension_manager/include/: driver_ext_mgr.h  event_config.h  ext_permission_manager.h
services/native/driver_extension_manager/profile/: BUILD.gn  peripheral_fault_notifier_config.json
services/native/driver_extension_manager/resources/: BUILD.gn
services/native/driver_extension_manager/src/: driver_etx_mgr.cpp  driver_ext_mgr.cpp  driver_ext_mgr_types.cpp  event_config.cpp  ext_permission_manager.cpp
services/zidl/include/: driver_ext_mgr_callback_death_recipient.h  driver_ext_mgr_callback_proxy.h  driver_ext_mgr_callback_stub.h  driver_ext_mgr_proxy.h  driver_ext_mgr_stub.h  driver_ext_mgr_types.h
services/zidl/src/: driver_ext_mgr_callback_death_recipient.cpp  driver_ext_mgr_callback_proxy.cpp  driver_ext_mgr_callback_stub.cpp  driver_ext_mgr_proxy.cpp  driver_ext_mgr_stub.cpp  driver_ext_mgr_types.cpp
test/fuzztest/bus_extension_fuzzer/usbextension_fuzzer/: BUILD.gn  usbextension_fuzzer.cpp  usbextension_fuzzer.h
test/fuzztest/ddk_usb_fuzzer/: BUILD.gn  usb_ddk_fuzzer.cpp  usb_ddk_fuzzer.h
test/fuzztest/drivers_pkg_manager_fuzzer/driverpkgmanager_fuzzer/: BUILD.gn  driverpkgmanager_fuzzer.cpp  driverpkgmanager_fuzzer.h  project.xml
test/moduletest/: BUILD.gn
test/moduletest/bus_extension_core_mt/: bus_extension_core_mt.cpp  ext_device_manager_mt.cpp
test/moduletest/bus_extension_usb_mt/: bus_extension_usb_mt.cpp
test/moduletest/ddk_usb_performance_test/: BUILD.gn  usb_ddk_performance_test.cpp
test/moduletest/driver_extension_controller_mt/: driver_extension_controller_mt.cpp
test/moduletest/drivers_pkg_manager_mt/: drivers_pkg_manager_mt.cpp
test/moduletest/usb_bus_extension_mt/: test_dev_change_callback.h  usb_bus_extension_mt.cpp
test/unittest/: BUILD.gn
test/unittest/bus_extension_core_test/: bus_extension_core_unit_test.cpp
test/unittest/bus_extension_test/src/: usb_bus_extension_test.cpp  usb_driver_info_test.cpp  usb_impl_mock.cpp  usb_subscriber_test.cpp
test/unittest/bus_extension_usb_test/include/: usb_ddk_service_mock.h  usb_host_impl_mock.h  usb_impl_mock.h
test/unittest/bus_extension_usb_test/src/: usb_bus_extension_test.cpp  usb_ddk_service_mock.cpp  usb_host_impl_mock.cpp  usb_impl_mock.cpp  usb_subscriber_test.cpp
test/unittest/ddk_base_test/: BUILD.gn  ddk_base_test.cpp
test/unittest/ddk_permission_test/: ddk_permission_test.cpp
test/unittest/ddk_scsi_test/: BUILD.gn  ddk_scsi_test.cpp
test/unittest/ddk_usb_serial_test/: BUILD.gn  ddk_usb_serial_test.cpp
test/unittest/ddk_usb_test/: BUILD.gn  usb_ddk_api_test.cpp
test/unittest/demo/DriverDemo/: README_zh.md
test/unittest/demo/ScsiPeripheralDemo/: build-profile.json5
test/unittest/demo/UsbSerialDriverDemo/: .gitignore  README_zh.md  build-profile.json5  code-linter.json5  hvigorfile.ts  oh-package.json5  ohosTest.md
test/unittest/device_manager_js_test/: BUILD.gn  DeviceManagerJsTest.js  config.json  openharmony_sx.p7b
test/unittest/device_manager_test/: BUILD.gn  device_manager_extended_test.cpp  device_manager_test.cpp
test/unittest/device_notification_test/: BUILD.gn  event_config_test.cpp  notification_locale_test.cpp  notification_peripheral_test.cpp
test/unittest/device_test/: device_test.cpp
test/unittest/driver_ext_mgr_test/: driver_ext_mgr_test.cpp
test/unittest/driver_extension_context_test/: BUILD.gn  driver_extension_context_test.cpp
test/unittest/driver_extension_controller_test/: driver_extension_controller_unit_test.cpp
test/unittest/driver_extension_controller_test/src/: driver_extension_controller_test.cpp
test/unittest/driver_extension_manager_client_test/: driver_extension_manager_client_test.cpp
test/unittest/driver_pkg_manager_test/: driver_pkg_manager_unit_test.cpp
test/unittest/drivers_pkg_manager_test/src/: driver_pkg_manager_test.cpp  drv_bundle_callback_test.cpp  pkg_db_helper_test.cpp
test/unittest/emit_event_test/: BUILD.gn  emit_event_test.cpp
test/unittest/ndk_permission_js_test/: BUILD.gn  Test.json
test/unittest/ndk_permission_js_test/signature/: openharmony_sx.p7b
test/unittest/ndk_stage_js_test/: BUILD.gn  Test.json
test/unittest/ndk_stage_js_test/AppScope/: app.json
test/unittest/ndk_stage_js_test/signature/: openharmony_sx.p7b
test/unittest/permission_js_test/: BUILD.gn  PermissionJsTest.js  config.json  openharmony_sx.p7b
test/unittest/systemapi_js_test/: BUILD.gn  PermissionJsTest.js
(+282 files in other folders)
