# Copyright (c) 2023-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
ext_mgr_path = "//drivers/external_device_manager"
utils_path = "//drivers/external_device_manager/utils"
ext_mgr_native_part_name = "external_device_manager"

declare_args() {
  extdevmgr_usb_pass_through = true
  external_device_manager_enable_service = true
  extdevmgr_feature_metrics_enable = false
}

if (defined(global_parts_info) && defined(global_parts_info.hiviewdfx_api_metrics)) {
  extdevmgr_feature_metrics_enable = true
}

external_device_defines = []
if (external_device_manager_enable_service) {
  external_device_defines = [ "ENABLE_EXTERNAL_DEVICE_DDK_SERVICE" ]
}
