# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../extdevmgr.gni")

ohos_shared_library("driver_extension_manager") {
  install_enable = true
  sources = [
    "${ext_mgr_path}/services/zidl/src/driver_ext_mgr_stub.cpp",
    "native/driver_extension_manager/src/driver_etx_mgr.cpp",
  ]

  include_dirs = [
    "${ext_mgr_path}/services/native/driver_extension_manager/include",
    "${ext_mgr_path}/interfaces/innerkits/",
    "${ext_mgr_path}/services/zidl/include/",
  ]
  configs = [ "${utils_path}:utils_config" ]
  external_deps = [
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  shlib_type = "sa"
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}

ohos_shared_library("bus_extension_core") {
  install_enable = true
  sources = [
    "native/driver_extension_manager/src/device_manager/etx_device_mgr.cpp",
  ]

  include_dirs = [ "${ext_mgr_path}/services/native/driver_extension_manager/include/device_manager" ]
  configs = [ "${utils_path}:utils_config" ]
  external_deps = [
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
  ]

  subsystem_name = "hdf"
  part_name = "external_device_manager"
}

config("drvext_manager_public_config") {
  include_dirs = [ "native/driver_extension_manager/include/bus_extension/usb" ]
}
config("drvext_manager_private_config") {
  include_dirs = [ "//third_party/jsoncpp/include/json" ]
}

ohos_shared_library("drivers_pkg_manager") {
  install_enable = true
  sources = [
    "native/driver_extension_manager/src/drivers_pkg_manager/driver_pkg_manager.cpp",
    "native/driver_extension_manager/src/drivers_pkg_manager/drv_bundle_state_callback.cpp",
  ]
  include_dirs =
      [ "native/driver_extension_manager/include/drivers_pkg_manager" ]
  configs = [
    ":drvext_manager_public_config",
    ":drvext_manager_private_config",
    "${utils_path}:utils_config",
  ]
  public_configs = [ ":drvext_manager_public_config" ]
  deps = [
    "native/driver_extension_manager/src/bus_extension:bus_extension",
    "//third_party/jsoncpp:jsoncpp",
  ]  # Component internal dependencies

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "drivers_interface_usb:libusb_proxy_1.0",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}
