# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/external_device_manager/extdevmgr.gni")
ohos_executable("usb_bus_extension_mt") {
  sources = [ "usb_bus_extension_mt/usb_bus_extension_mt.cpp" ]
  include_dirs = []
  configs = [ "${utils_path}:utils_config" ]
  deps = [ "${ext_mgr_path}/services/native/driver_extension_manager/src/bus_extension:bus_extension" ]
  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "external_device_manager"
  install_enable = false
}

ohos_executable("driver_extension_controller_mt") {
  sources =
      [ "driver_extension_controller_mt/driver_extension_controller_mt.cpp" ]
  include_dirs = [ "${ext_mgr_path}/services/native/driver_extension_manager/include/driver_controller" ]
  configs = [ "${utils_path}:utils_config" ]
  deps = [ "${ext_mgr_path}/services/native/driver_extension_manager/src/driver_controller:driver_extension_controller" ]
  external_deps = [
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "samgr:samgr_proxy",
  ]
  part_name = "external_device_manager"
  install_enable = false
}
group("external_device_manager_mt") {
  deps = [
    ":driver_extension_controller_mt",
    ":usb_bus_extension_mt",
  ]
}
