# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//drivers/external_device_manager/extdevmgr.gni")
module_output_path = "external_device_manager/unittest"
bus_extension_include_path = "${ext_mgr_path}/services/native/driver_extension_manager/include/bus_extension/usb"
ohos_unittest("bus_extension_test") {
    module_out_path = "${module_output_path}"
    sources = [
        "bus_extension_test/src/usb_driver_info_test.cpp",
        "bus_extension_test/src/usb_impl_mock.cpp",
        "bus_extension_test/src/usb_bus_extension_test.cpp",
        "bus_extension_test/src/usb_subscriber_test.cpp",
    ]
    include_dirs = [
        "//third_party/jsoncpp/include/json",
        "bus_extension_test/include",
        "${bus_extension_include_path}"
    ]
    deps = [
        "${ext_mgr_path}/services:bus_extension",
        "//third_party/googletest:gmock_main",
        "//third_party/googletest:gtest_main",
        "//third_party/jsoncpp:jsoncpp",
    ]
    external_deps = [
        "bundle_framework:appexecfwk_base",
        "c_utils:utils",
        "samgr:samgr_proxy",
        "hiviewdfx_hilog_native:libhilog",
        "drivers_interface_usb:libusb_proxy_1.0",
    ]
    configs = [
        "${utils_path}:utils_config",
    ]
}

group("external_device_manager_test") {
    testonly = true
    deps = [
        ":bus_extension_test",
    ]
}