# Copyright (c) 2025-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../extdevmgr.gni")

ohos_shared_library("scsi") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  include_dirs = [
    "${ext_mgr_path}/interfaces/ddk/scsi/",
    "${utils_path}/include/",
  ]

  defines = external_device_defines
  sources = [ "scsi_ddk_api.cpp" ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_usb:libscsi_ddk_proxy_1.0",
    "hilog:libhilog",
    "ipc:ipc_capi",
    "ipc:ipc_core",
    "bounds_checking_function:libsec_shared"
  ]
  cflags_cc = [
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
  ]
  install_enable = true
  relative_install_dir = "ndk"
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}
