# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//build/ohos/taihe_idl/taihe.gni")
import("//drivers/external_device_manager/extdevmgr.gni")

copy_taihe_idl("copy_deviceManager") {
  sources = [ "idl/ohos.driver.deviceManager.taihe" ]
  external_deps = []
}

subsystem_name = "hdf"
part_name = "external_device_manager"

taihe_generated_file_path = "$taihe_file_path/out/$subsystem_name/$part_name"
ohos_taihe("run_taihe") {
  taihe_generated_file_path = "$taihe_generated_file_path"
  deps = [ ":copy_deviceManager" ]
  outputs = [
    "$taihe_generated_file_path/src/ohos.driver.deviceManager.abi.c",
    "$taihe_generated_file_path/src/ohos.driver.deviceManager.ani.cpp",
  ]
}

taihe_shared_library("device_manager_taihe_native") {
  taihe_generated_file_path = "$taihe_generated_file_path"
  part_name = "$part_name"
  subsystem_name = "$subsystem_name"
  sources = get_target_outputs(":run_taihe")
  include_dirs = [
    "./include/",
    "${utils_path}/include/",
    "${ext_mgr_path}/interfaces/innerkits/",
  ]

  sources += [
    "${ext_mgr_path}/services/native/driver_extension_manager/src/driver_ext_mgr_types.cpp",
    "src/ani_constructor.cpp",
    "src/ohos.driver.deviceManager.impl.cpp",
  ]
  deps = [
    ":run_taihe",
    "${ext_mgr_path}/interfaces/innerkits:driver_ext_mgr_client"
  ]

   external_deps = [
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:rpc_taihe",
    "ipc:ipc_single",
    "runtime_core:ani",
  ]
}

generate_static_abc("device_manager_abc") {
  base_url = "$taihe_generated_file_path"
  files = [ "$taihe_generated_file_path/@ohos.driver.deviceManager.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/device_manager_abc.abc"
  dependencies = [ ":run_taihe" ]
}

ohos_prebuilt_etc("device_manager_etc") {
  source = "$target_out_dir/device_manager_abc.abc"
  module_install_dir = "framework"
  part_name = "$part_name"
  subsystem_name = "$subsystem_name"
  deps = [ ":device_manager_abc" ]
}

# generate_static_abc("device_manager_test") {
#   base_url = "$taihe_generated_file_path"
#   files = [ "$taihe_generated_file_path/@ohos.driver.deviceManager.ets" ]
#   is_boot_abc = "True"
#   device_dst_file = "/system/framework/device_manager_abc.abc"
#   dependencies = [ ":run_taihe" ]
# }

group("device_manager_taihe") {
  deps = [
    ":device_manager_etc",
    ":device_manager_taihe_native"
  ]
}



